# terminal-clipboard

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: test.yml
examples/: write_read.rs
src/: clipboard.rs  errors.rs  lib.rs  local.rs  macos.rs  termux.rs  win.rs  x11.rs
