[package]
name = "terminal-clipboard"
version = "0.2.0"
authors = ["Denys Seguret <cano.petrole@gmail.com>"]
description = "a minimal cross-platform clipboard"
repository = "https://github.com/Canop/terminal-clipboard"
keywords = ["clipboard", "terminal"]
readme = "README.md"
edition = "2018"
license = "MIT"

[features]
default = []
termux = []

[dependencies]
termux-clipboard = "0.1"

[target.'cfg(target_os="windows")'.dependencies]
clipboard-win = "4.0.3"

[target.'cfg(not(any(target_os="windows")))'.dependencies]
x11-clipboard = "0.5.1"
