[package]
name = "terminal-clipboard"
version = "0.4.1"
authors = ["Denys Seguret <cano.petrole@gmail.com>"]
description = "a minimal cross-platform clipboard"
repository = "https://github.com/Canop/terminal-clipboard"
keywords = ["clipboard", "terminal"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
once_cell = "1.8"

[features]
default = []

[target.'cfg(target_os="android")'.dependencies]
termux-clipboard = "0.1"

[target.'cfg(target_os="windows")'.dependencies]
clipboard-win = "4.0.3"

[target.'cfg(target_os="macos")'.dependencies]
clipboard_macos = "0.1"

[target.'cfg(not(any(target_os="windows",target_os="android",target_os="macos")))'.dependencies]
x11-clipboard = "0.8.1"
